crates/gfm-syntax/tests/snapshots/paragraph/example_191.snap
---
source: crates/gfm-syntax/src/grammer/mod.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Inline [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "aaa" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    ParaBreak: "\n\n" [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    LineEnding: "\n" [ offsets: 5, position: ( line: 2, col: 0 ) ] ]
  Paragraph [ offsets: 6, position: ( line: 3, col: 0 ) ] ]
    Inline [ offsets: 6, position: ( line: 3, col: 0 ) ] ]
      Word: "bbb" [ offsets: 6, position: ( line: 3, col: 0 ) ] ]
  Eof: "\0" [ offsets: 9, position: ( line: 3, col: 3 ) ] ]
