crates/gfm-syntax/tests/snapshots/paragraph/example_192.snap
---
source: crates/gfm-syntax/tests/paragraphs.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "  " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 2, position: ( line: 0, col: 2 ) ] ]
    Inline [ offsets: 2, position: ( line: 0, col: 2 ) ] ]
      Word: "aaa" [ offsets: 2, position: ( line: 0, col: 2 ) ] ]
    LineEnding: "\n " [ offsets: 5, position: ( line: 0, col: 5 ) ] ]
    Inline [ offsets: 7, position: ( line: 1, col: 0 ) ] ]
      Word: "bbb" [ offsets: 7, position: ( line: 1, col: 0 ) ] ]
  Eof: "\0" [ offsets: 10, position: ( line: 1, col: 3 ) ] ]
