crates/gfm-syntax/tests/snapshots/paragraph/example_194.snap
---
source: crates/gfm-syntax/src/grammer/mod.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "   " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Inline [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
      Word: "aaa" [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    LineEnding: "\n" [ offsets: 6, position: ( line: 0, col: 6 ) ] ]
    Inline [ offsets: 7, position: ( line: 1, col: 0 ) ] ]
      Word: "bbb" [ offsets: 7, position: ( line: 1, col: 0 ) ] ]
  Eof: "\0" [ offsets: 10, position: ( line: 1, col: 3 ) ] ]
