crates/gfm-syntax/tests/snapshots/paragraph/example_196.snap
---
source: crates/gfm-syntax/tests/paragraphs.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Inline [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "aaa" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      HardLineBreaks [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
        WhiteSpace: "     " [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    LineEnding: "\n" [ offsets: 8, position: ( line: 0, col: 8 ) ] ]
    Inline [ offsets: 9, position: ( line: 1, col: 0 ) ] ]
      Word: "bbb" [ offsets: 9, position: ( line: 1, col: 0 ) ] ]
      WhiteSpace: "     " [ offsets: 12, position: ( line: 1, col: 3 ) ] ]
  Eof: "\0" [ offsets: 17, position: ( line: 1, col: 8 ) ] ]
